syntax = "proto3";

package user;

option go_package = "github.com/jha929/lego-grpc/protos/user";

service User {
    rpc CreateUser(CreateUserRequest) returns (GetUserReply);
    rpc GetUser(GetUserRequest) returns (GetUserReply);
    rpc ListUsers(ListUsersRequest) returns (ListUsersReply);
}

message UserMessage {
    string user_id = 1;
    string nickname = 2;
}

message CreateUserRequest {
    string nickname = 1;
}

message GetUserRequest {
    string user_id = 1;
}

message GetUserReply {
    UserMessage user_message = 1;
}

message ListUsersRequest{}

message ListUsersReply {
    repeated UserMessage user_messages = 1;
}
